--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ body {
   background-color: #aaa;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+h2, h3 {
+font-family: 'Times New Roman', Times, serif;
+font-size: larger;
+font-display: initial;
+font-style: oblique;
+}
